working interval block by time

--- a/tests/intervals.html
+++ b/tests/intervals.html
@@ -17,7 +17,9 @@
 				center: 'title',
 				right: 'month,agendaWeek,basicWeek,agendaDay,basicDay'
 			},
-            editable: true,
+			editable: true,
+			selectable: true,
+			selectableIntervals: true,
             intervals: [
                 {
                     start: new Date(y,m,1),
