working interval overlays

--- a/tests/intervals.html
+++ b/tests/intervals.html
@@ -28,6 +28,10 @@
                 {
                     start: new Date(y,m,7,9),
                     end: new Date(y,m,8,12)
+                },
+                {
+                    start: new Date(y,m,15,9),
+                    end: new Date(y,m,17,12)
                 }
             ],
 			events: [
