--- a/tests/intervals.html
+++ b/tests/intervals.html
@@ -19,7 +19,7 @@
 			},
 			editable: true,
 			selectable: true,
-			selectableIntervals: true,
+			selectableOnlyIntervals: true,
             intervals: [
                 {
                     start: new Date(y,m,1),
