fixed agenda interval renderer when intervals intersect

--- a/tests/intervals.html
+++ b/tests/intervals.html
@@ -32,6 +32,10 @@
                 {
                     start: new Date(y,m,15,9),
                     end: new Date(y,m,17,12)
+				},
+                {
+                    start: new Date(y,m,2,13),
+                    end: new Date(y,m,4,0)
                 }
             ],
 			events: [
