fixes to agenda interval renderer

--- a/tests/intervals.html
+++ b/tests/intervals.html
@@ -36,6 +36,14 @@
                 {
                     start: new Date(y,m,2,13),
                     end: new Date(y,m,4,0)
+				},
+                {
+                    start: new Date(y,m,17,13),
+                    end: new Date(y,m,17,14)
+				},
+                {
+                    start: new Date(y,m,17,11),
+                    end: new Date(y,m,17,14)
                 }
             ],
 			events: [
